bk_ida/gccida/g3/subst_constants
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2963:4: error: expected ';' after expression
rtx v35; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2963:5: error: use of undeclared identifier 'v35'
rtx v35; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2973:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2973:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2976:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v48; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2984:6: error: use of undeclared identifier 'dest'
rtx *dest; // [rsp+0h] [rbp-78h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2985:4: error: expected ';' after expression
rtx desta; // [rsp+0h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2985:5: error: use of undeclared identifier 'desta'
rtx desta; // [rsp+0h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2987:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0a; // [rsp+8h] [rbp-70h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2988:4: error: expected ';' after expression
rtx op0b; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2988:5: error: use of undeclared identifier 'op0b'
rtx op0b; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2989:4: error: expected ';' after expression
rtx src_copy; // [rsp+10h] [rbp-68h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2989:5: error: use of undeclared identifier 'src_copy'
rtx src_copy; // [rsp+10h] [rbp-68h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2990:4: error: expected ';' after expression
rtx x; // [rsp+18h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2990:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+18h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2991:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+24h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2993:4: error: expected ';' after expression
rtx inner; // [rsp+38h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2993:5: error: use of undeclared identifier 'inner'
rtx inner; // [rsp+38h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/integrate.c:2996:1: error: use of undeclared identifier 'dest'
dest = loc; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_constants/src/obj/integrate.o] Error 1
